@@ -1,3 +1,8 @@
+2008-01-28  Jonathan Pryor  <jpryor@novell.com>
+
+	* UnixSignal.cs: Added; Polling and blocking based Unix signal mechanism.
+	  http://lists.ximian.com/pipermail/mono-devel-list/2008-January/026501.html
+
 2008-01-22  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* UnixPipes.cs: Fix Equals to avoid NRE (and return false if object 
